# greendetective

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.third-party.yml  docker-compose.yml  main.tf  requirements.txt
.github/workflows/: deploy.yml  infra-destroy.yml  initial-setup.yml
bootstrap/service/configs/dev/: supervisord.conf
bootstrap/service/configs/prd/: supervisord.conf
bootstrap/service/scripts/dev/: code-changes-watcher.sh
bootstrap/service/service-api/: gunicorn-config.py  startup.sh
bootstrap/service/service-process/: startup.sh  supervisord.conf
docker/aws/: create_s3_buckets.sh  credentials
scripts/: aws-ecs-service.sh  check-ecs-exec.sh
src/: .env.local.template  .env.template  .gitignore  Evian_report_2025-01-26_13-03-47.xlsx  Zevero_report_2025-01-25_01-32-41.xlsx  custom_storages.py  manage.py  pyproject.toml  requirements.txt
src/detective/: admin.py  apps.py  tasks.py  urls.py  views.py
src/detective/management/commands/: load_glossary.py
src/detective/migrations/: 0001_initial.py  0002_alter_company_domain.py  0002_alter_userprofile_business.py  0002_payment_plans.py  0002_vector_index.py  0003_inviterequest.py  0003_remove_business_reports_generated_and_more.py  0003_remove_report_processing_report_processed_and_more.py  0003_remove_report_user_uuid_report_user_id.py  0004_alter_report_user_id.py  0004_alter_userprofile_business.py  0004_staging_defunct.py  0005_alter_report_user_id.py  0005_rename_evaluation_embedding_rawstatistics_embedding.py  0005_sustainabilityglossary.py  0006_business_emailverificationtoken_invitecode_and_more.py  0006_remove_sustainabilityglossary_definition_and_more.py  0006_report_processing.py  0007_rawstatistics_category_rawstatistics_justification_and_more.py  0007_rename_company_uuid_report_company_and_more.py  0007_sustainabilityglossary_definition.py  0008_alter_report_urls.py  0008_rawstatistics_comparison_analysis.py  0008_remove_rawstatistics_url_rawstatistics_claim.py  0009_remove_rawstatistics_staging_rawstatistics_staging.py  0009_rename_company_uuid_processedstatistics_company_and_more.py  0010_remove_report_s3_url_report_report_file.py  0011_company_about_raw_company_about_summary.py  0012_company_about_url.py  0013_rename_raw_html_staging_raw_rawstatistics_processed.py
src/detective/models/: __init__.py  business.py  company.py  glossary.py  payment_plan.py  processed_statistics.py  profile.py  raw_statistics.py  report.py  run.py  staging.py  verification.py
src/detective/serializers/: __init__.py  detective.py  invite.py  report.py  user.py
src/detective/tasks/: __init__.py  general.py  helpers.py  post_staging.py  pre_staging.py  scraping.py
src/detective/utils/: __init__.py  assistant.py  completion.py  email.py  process_run.py  report_generator.py  scoring_rules.py  scraper.py  statistics_processor.py
src/detective/utils/run/: __init__.py  base.py  post.py  pre.py
src/detective/views/: __init__.py  auth.py  detective.py  invite.py  report.py  verification.py
src/green_detective/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
src/green_detective/management/commands/: ensure_adminuser.py
src/green_detective/middleware/: __init__.py  health_check.py
src/green_detective/utils/: datatypes.py
src/green_detective/utils/swagger/: __init__.py  manual_parameters.py  response_parameters.py
src/logs/: celery.log.2024-06-15  celery.log.2024-06-16  debug.log.2024-06-16  django-server.log.2024-06-16  django-server.log.2024-06-17
src/templates/admin/: index.html  invite_request_change_list.html
src/templates/emails/: _base_email_style.html  invite.html  verify_email.html  welcome.html
src/utils/: __init__.py  datatypes.py  retry.py
src/utils/aws/: s3_client.py
